# django_rest_auth_embedded/views/registration.py
@@ -1,6 +1,7 @@
 from .base import BaseView
 
 from ..serializers import RegistrationSerializer
+from ..models import User
 
 
 class RegistrationView(BaseView):
@@ -11,5 +12,10 @@ class RegistrationView(BaseView):
         serializer = RegistrationSerializer(data=request.data)
         if serializer.is_valid():
             serializer.save()
-            return self.response_201(data=serializer.data)
+            user = User.objects.get(username=serializer.data['username'])
+            return self.response_201(
+                data={
+                    'id': user.id,
+                }
+            )
         return self.response_400(data=serializer.errors)
